--- a/lesson1/exercises/src/app/chores-list/chores-list.component.css
+++ b/lesson1/exercises/src/app/chores-list/chores-list.component.css
@@ -1,3 +1,3 @@
-div.chores { border: thin black dashed; font-family: 'Times New Roman', Times, serif; font-size: 2vw; color: purple; }
+div.chores { font-family: 'Times New Roman', Times, serif; font-size: 2vw; color: purple; }
 h3 { text-decoration: underline; }
 div.chores li { font-style: italic; }
