--- a/lesson2/examples/ngfor-practice/src/app/chores/chores.component.html
+++ b/lesson2/examples/ngfor-practice/src/app/chores/chores.component.html
@@ -1,8 +1,9 @@
-<div class='chores' *ngFor = "let title of todoTitles">
-   <h3>{{title}}</h3>
-   <ul>
-     <li *ngFor = "let chore of chores">{{chore}}</li>
-   </ul>
-   <hr>
+<div class='chores' *ngFor = 'let list of chores'>
+  <h3>{{list.title}}</h3>
+  <ul>
+    <li *ngFor = 'let chore of list.tasks'>{{chore}}</li>
+
+    </ul>
+  <hr>
 </div>
  
