--- a/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
+++ b/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
@@ -1,9 +1,10 @@
 <div class="chores">
     <h3>Chores</h3>
-    <ul>
+    <ul *ngIf = "chores.length !== 0">
         <li *ngFor = 'let chore of chores'>{{chore}}</li>
     </ul>
 </div>
+<p id="harder" *ngIf ="chores.length > finishedChores.length">Work harder!</p>
 <hr>
 <div class="doneChores">
     <h3>Done Chores</h3>
@@ -11,4 +12,15 @@
         <li *ngFor = 'let done of finishedChores'>{{done}}</li>
     </ul>
 </div>
+<p id="done" *ngIf = "chores.length == 0 || finishedChores.length >= chores.length + 3; else tryAgain"><img src="{{targetImage}}"></p>
+
+<h1 class="treat" *ngIf ="chores.length == 0 && finishedChores.length >= 4; else noTreat">Ice cream treat!</h1>
+    <ng-template #noTreat>
+        <h3 id="notreat">To earn an ice cream treat:<ol><li>Finish all your chores</li><li>Have 4 or more Finished Chores</li></ol></h3>
+    </ng-template>
+<ng-template #tryAgain>
+    <p id="done">No allowance yet!</p>
+</ng-template>
+
 <hr>
+
